refactor: improve code quality and fix critical bug
- Fix critical bug in DuplicationHandler.getItemTextures() returning null instead of newTextures
- Add Logs.debug(Throwable) helper for consistent exception logging
- Replace scattered printStackTrace() calls with Logs.debug(e) in key files:
  - DuplicationHandler.java
  - ConfigsManager.java
  - ItemParser.java
- Fix deprecated WorldEdit BlockVector3 API usage (use x()/y()/z() instead of getX()/getY()/getZ())
- Extract duplicate code in WorldEditUtils.collectBlocksFromClipboard()
- Fix bug comparing location to itself in WorldEditUtils
- Refactor NoteBlockMechanicListener.instrumentMap to immutable constant with EnumMap
- Use early returns and cleaner code patterns