@@ -253,14 +253,18 @@ public class NoteBlockMechanicListener implements Listener {
     // If block is not a custom block, play the correct sound according to the below block or default
     @EventHandler(priority = EventPriority.NORMAL)
     public void onNotePlayed(final NotePlayEvent event) {
-        if (event.getInstrument() != Instrument.PIANO) event.setCancelled(true);
-        else {
-            if (instrumentMap.isEmpty()) instrumentMap = getInstrumentMap();
-            String blockType = event.getBlock().getRelative(BlockFace.DOWN).getType().toString().toLowerCase(Locale.ROOT);
-            Instrument fakeInstrument = instrumentMap.entrySet().stream().filter(e -> e.getValue().contains(blockType)).map(Map.Entry::getKey).findFirst().orElse(Instrument.PIANO);
-            // This is deprecated, but seems to be without reason
-            event.setInstrument(fakeInstrument);
+        if (event.getInstrument() != Instrument.PIANO) {
+            event.setCancelled(true);
+            return;
         }
+        String blockType = event.getBlock().getRelative(BlockFace.DOWN).getType().toString().toLowerCase(Locale.ROOT);
+        Instrument fakeInstrument = INSTRUMENT_MAP.entrySet().stream()
+                .filter(e -> e.getValue().contains(blockType))
+                .map(Map.Entry::getKey)
+                .findFirst()
+                .orElse(Instrument.PIANO);
+        // This is deprecated, but seems to be without reason
+        event.setInstrument(fakeInstrument);
     }
 
     @EventHandler(priority = EventPriority.HIGHEST, ignoreCancelled = true)
@@ -506,12 +510,12 @@ public class NoteBlockMechanicListener implements Listener {
     }
 
     // Used to determine what instrument to use when playing a note depending on below block
-    public static Map<Instrument, List<String>> instrumentMap = new HashMap<>();
+    private static final Map<Instrument, List<String>> INSTRUMENT_MAP = createInstrumentMap();
 
-    private static Map<Instrument, List<String>> getInstrumentMap() {
-        Map<Instrument, List<String>> map = new HashMap<>();
+    private static Map<Instrument, List<String>> createInstrumentMap() {
+        Map<Instrument, List<String>> map = new EnumMap<>(Instrument.class);
         map.put(Instrument.BELL, List.of("gold_block"));
-        map.put(Instrument.BASS_DRUM, Arrays.asList("stone", "netherrack", "bedrock", "observer", "coral", "obsidian", "anchor", "quartz"));
+        map.put(Instrument.BASS_DRUM, List.of("stone", "netherrack", "bedrock", "observer", "coral", "obsidian", "anchor", "quartz"));
         map.put(Instrument.FLUTE, List.of("clay"));
         map.put(Instrument.CHIME, List.of("packed_ice"));
         map.put(Instrument.GUITAR, List.of("wool"));
@@ -523,9 +527,8 @@ public class NoteBlockMechanicListener implements Listener {
         map.put(Instrument.BANJO, List.of("hay_bale"));
         map.put(Instrument.PLING, List.of("glowstone"));
         map.put(Instrument.BASS_GUITAR, List.of("wood"));
-        map.put(Instrument.SNARE_DRUM, Arrays.asList("sand", "gravel", "concrete_powder", "soul_soil"));
-        map.put(Instrument.STICKS, Arrays.asList("glass", "sea_lantern", "beacon"));
-
-        return map;
+        map.put(Instrument.SNARE_DRUM, List.of("sand", "gravel", "concrete_powder", "soul_soil"));
+        map.put(Instrument.STICKS, List.of("glass", "sea_lantern", "beacon"));
+        return Collections.unmodifiableMap(map);
     }
 }
